speech bubble z-index fix

--- a/scss/includes/_comicbubbles.scss
+++ b/scss/includes/_comicbubbles.scss
@@ -11,6 +11,7 @@ $bubble-padding-horizontal: 2;
 $bubble-shadow-offset: 2;
 $bubble-shadow-blur: 4;
 $bubble-shadow-color: #888 !default;
+$bubble-base-zindex: 2000 !default;
 
 
 // makes a speech bubble
@@ -36,9 +37,11 @@ $bubble-shadow-color: #888 !default;
 	}
 	&:before {
 		border: 25px solid;
+		z-index: $bubble-base-zindex + 1;
 	}
 	&:after {
 		border: 15px solid;
+		z-index: $bubble-base-zindex + 2;
 	}
 
 	@if $side == right {
@@ -79,81 +82,3 @@ $bubble-shadow-color: #888 !default;
 
 	}
 }
-
-// .speech {
-// 	position: relative;
-// 	height: $bubble-height;
-// 	background-color: $bubble-background-color;
-// 	padding: emCalc($bubble-padding-vertical, $bubble-padding-horizontal);
-
-// 	border: 8px solid $bubble-border-color;
-// 	@include radius(emCalc($bubble-border-radius));
-// 	@include box-shadow($bubble-shadow-color, emCalc($bubble-shadow-offset), emCalc($bubble-shadow-offset), emCalc($bubble-shadow-blur));
-// }
-
-// .speech:before {
-// 	content: ' ';
-// 	position: absolute;
-// 	width: 0;
-// 	height: 0;
-
-// 	right: 30px;
-// 	bottom: -50px;
-// 	border: 25px solid;
-// 	border-color: $bubble-border-color transparent transparent $bubble-border-color;
-// }
-
-// .speech:after {
-// 	content: ' ';
-// 	position: absolute;
-// 	width: 0;
-// 	height: 0;
-// 	right: 42px;
-// 	bottom: -30px;
-// 	border: 15px solid;
-// 	border-color: #fff transparent transparent #fff;
-// }
-
-
-
-// thought bubbles
-// .thought
-// {
-// 	position: relative;
-// 	width: 130px;
-// 	height: 100px;
-// 	text-align: center;
-// 	line-height: 100px;
-// 	background-color: $bubble-background-color;
-// 	border: 8px solid $bubble-border-color;
-// 	-webkit-border-radius: 58px;
-// 	-moz-border-radius: 58px;
-// 	border-radius: 58px;
-// 	-webkit-box-shadow: 2px 2px 4px #888;
-// 	-moz-box-shadow: 2px 2px 4px #888;
-// 	box-shadow: 2px 2px 4px #888;
-// }
-
-// .thought:before, .thought:after
-// {
-// 	left: 10px;
-// 	top: 70px;
-// 	width: 40px;
-// 	height: 40px;
-// 	background-color: #fff;
-// 	border: 8px solid $bubble-border-color;
-// 	-webkit-border-radius: 28px;
-// 	-moz-border-radius: 28px;
-// 	border-radius: 28px;
-// }
-
-// .thought:after
-// {
-// 	width: 20px;
-// 	height: 20px;
-// 	left: 5px;
-// 	top: 100px;
-// 	-webkit-border-radius: 18px;
-// 	-moz-border-radius: 18px;
-// 	border-radius: 18px;
-// }
